  symplectic integration algorithm implemented in class SIAVSolver.

- Added a new example, Example 22/22p, that illustrates the use of AMR to solve
  a linear elasticity problem. This is an extension of Example 2/2p.

Miscellaneous
-------------
- Added unit tests based on the Catch++ library.

- Altered the way FGMRES counts its iterations so that it matches GMRES.

- Various other simplifications, extensions, and bugfixes in the code.

API changes
-----------
- In multiple places, use Geometry::Type instead of int, where appropriate.
- In multiple places, use Element::Type instead of int, where appropriate.
- The Mesh methods GetElementBaseGeometry and GetBdrElementBaseGeometry no
  longer have a default value for their parameter, they only work with an
  explicitly given index.
- In class Mesh, added methods useful for queries regarding the types of
  elements present in the mesh: HasGeometry, GetNumGeometries, GetGeometries,
  and class Mesh::GeometryList.
- The struct CoarseFineTransformations (returned by the Mesh method
  GetRefinementTransforms) now stores the embedding matrices separately for each
  Geometry::Type.
- In class ParMesh, replaced the method GroupNFaces with two new methods:
  GroupNTriangles and GroupNQuadrilaterals. Also, replaced GroupFace with two
  methods: GroupTriangle and GroupQuadrilateral.
- In class ParMesh, made the two RefineGroups methods protected.
- Removed the virtual method Element::GetRefinementFlag, it is only used by the
  derived class Tetrahedron.
- Added new methods: Array::CopyTo, Tetrahedron::Init.


Version 3.4, released on May 29, 2018
=====================================

More general and efficient mesh adaptivity
------------------------------------------
- Added support for PUMI, the Parallel Unstructured Mesh Infrastructure from
  https://scorec.rpi.edu/pumi. PUMI is an unstructured, distributed mesh data
  management system that is capable of handling general non-manifold models and